cmake_minimum_required(VERSION 3.25)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(sum Easy/sum.cpp)
add_executable(isPalindrome Easy/isPalindrome.cpp)
add_executable(romanToInt Easy/romanToInt.cpp)
add_executable(longestCommonPrefix Easy/longestCommonPrefix.cpp)
add_executable(isVaild Easy/isVaild.cpp)
add_executable(mergeTwoLists Easy/mergeTwoLists.cpp)